# Crafter_SDK

./: .gitmodules
CMAKE_HELPER/: CMakeLists.txt
Crafter_Core/src/: CrafterPackage.h  PackageDemos.cpp  PackageDemos.h
Crafter_Core/src/Crafter/: CrafterPackage.cpp  PackageDemos.cpp  PackageDemos.h
Crafter_Core/src/Crafter/Blueprint/: Blueprint.cpp  Blueprint.h
Crafter_Core/src/Crafter/Camera/: Camera.cpp  Camera.h  Rotation.cpp  Rotation.h  Translation.cpp  Translation.h
Crafter_Core/src/Crafter/CameraControls/: FreeformCamera.h  OrbitingCamera.h
Crafter_Core/src/Crafter/CoordinateSystems/: ClipSpace.cpp  ClipSpace.h  Model_Matrix.h  Rotation.cpp  Rotation.h  Scale.cpp  Scale.h  Translation.cpp  Translation.h  ViewSpace.cpp  ViewSpace.h  View_Matrix.h  WorldSpace.cpp  WorldSpace.h
Crafter_Core/src/Crafter/CoordinateSystems/Wrappers/: Rotation.h  Scale.h  Translation.h
Crafter_Core/src/Crafter/Demo/: Demo.cpp  Demo.h
Crafter_Core/src/Crafter/Package/: Package.cpp  Package.h
Crafter_Core/src/Crafter/PolygonDeformer/: PolygonDeformerBlueprint.cpp  PolygonDeformerBlueprint.h
Crafter_Core/src/Crafter/WorldEdit/: WorldEdit.cpp  WorldEdit.h
Crafter_Core/src/Crafter/WorldEngine/: DrawableObject.h  DrawableObjectGroup.h  MeshGenerator.cpp  MeshGenerator.h  WorldEngine.cpp  WorldEngine.h  WorldEngineBase.h
Crafter_Core/src/Crafter/WorldEngine/DrawableObjects/: Cube.h  GridWireframe.h  Triangle.h
Crafter_Core/src/Crafter/WorldEngine/DrawableObjects/Primatives/: Line.h  PlaneWireframe.h  Triangle.h
Crafter_Core/src/Crafter/WorldEngine/WINAPI_KERNEL/SDK/include/: AnyOpt.h
Crafter_Core/src/Crafter/WorldEngine/WINAPI_KERNEL/SDK/src/Windows/Kernel/: CMakeLists.txt
Crafter_Core/src/PolygonDeformer/: CMakeLists.txt  PolygonDeformerBlueprint.cpp
Crafter_Magnum/: empty.cpp
Crafter_Magnum/src/Magnum/Platform/: WindowlessAndroidApplicationBETA.cpp  WindowlessAndroidApplicationBETA.h  WindowlessAndroidApplicationBETA_CONFIGURATION.h  WindowlessAndroidApplicationBETA_GLCONFIGURATION.h
